# mbgrader

./: .gitignore  README.md  canvas2mbgrader.ipynb  canvas2mbgrader.m  canvas2mbgrader.py  config.py  environment.yml  init_db.py  mbgrader2canvas.py  pyproject.toml
app/: __init__.py  models.py  routes.py  run_server.py
app/commands/: init_db.py
app/models/: __init__.py  assignment.py  batch.py  batch_response.py  datatype.py  question.py  response.py  student.py  submission.py
app/selectors/: assignment.py  batch.py  datatype.py  question.py  response.py  submission.py
app/services/: assignment.py  batch.py  grades.py  question.py  response.py  student.py
app/static/js/: app.js  collections.js  models.js  router.js  views.js
app/templates/: index.html
config/: config.py
docs/: guide.md
guide/: mbgrader_guide.md
submissions/example1/1000/: Y.csv
submissions/example1/1003/: exampleWords.txt
submissions/example1/1007/: TwoAvec.csv
submissions/example1/1019/: TwoDnum.txt
submissions/example1/1027/: exampleWords.txt
submissions/example1/1033/: A.csv  exampleCode.txt  exampleWords.txt
submissions/example1/1042/: TwoBvec.csv
submissions/example1/1077/: TwoDnum.txt  Y.csv  excode.txt
submissions/example1/1081/: TwoAvec.csv
submissions/example1/1091/: exampleWords.txt
submissions/example1/1093/: exampleWords.txt
submissions/example1/1101/: OneBmat.txt  OneCvec.txt  TwoDnum.txt
submissions/example1/1105/: TwoBvec.csv
submissions/example1/1124/: OnaAnum.csv
submissions/example1/1125/: TwoDnum.csv
submissions/example1/1139/: A.csv  (+1 more)
(+116 files in other folders)
