[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mbgrader"
version = "0.1.0"
requires-python = "==3.11.2"
dependencies = [
    "flask == 2.3.2",
    "flask-sqlalchemy == 3.0.5",
    "numpy == 1.25.0",
    "pandas == 1.4",
    "python-dotenv == 1.0.0",
]

[tool.setuptools]
packages = ["app"]
